8251261: CDS dumping should not clear states in live classes